[gd_scene load_steps=11 format=1]

[ext_resource path="res://scenes/dungeon/debugtiles.tres" type="TileSet" id=1]
[ext_resource path="res://scenes/dungeon/onewayplatform.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/common/hangable.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/dungeon/platforms/flooredge2.png" type="Texture" id=4]
[ext_resource path="res://scenes/common/hangblockend.png" type="Texture" id=5]
[ext_resource path="res://scenes/common/damagables/spiketile.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/holyruins/boss/gianteyeball.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/holyruins/boss/sensor.gd" type="Script" id=8]
[ext_resource path="res://scenes/common/teleport.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 430.861, 16 )

[node name="LVL_NOTITLE" type="Node2D"]

__meta__ = {
"__editor_plugin_screen__": "2D"
}

[node name="tilemap" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 1 )
cell/size = Vector2( 32, 32 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -589836, 14, -589835, 1073741859, -589834, 1073741859, -589833, 1073741859, -589832, 1073741859, -589831, 1073741859, -589830, 1073741859, -589829, 1073741859, -589828, 1073741859, -589827, 1073741859, -589826, 1073741859, -589825, 1073741859, -655357, 1073741859, -655356, 1073741859, -655355, 1073741859, -655354, 1073741859, -655353, 1073741859, -655352, 1073741859, -655351, 1073741859, -655350, 1073741859, -655349, 1073741859, -655348, 1073741859, -655347, 1073741859, -655346, 14, -524300, 14, -524299, 1073741859, -524298, 1073741859, -524297, 1073741859, -524296, 1073741859, -524295, 1073741859, -524294, 1073741859, -524293, 1073741859, -524292, 1073741859, -524291, 1073741859, -524290, 1073741859, -524289, 1073741859, -589821, 1073741859, -589820, 1073741859, -589819, 1073741859, -589818, 1073741859, -589817, 1073741859, -589816, 1073741859, -589815, 1073741859, -589814, 1073741859, -589813, 1073741859, -589812, 1073741859, -589811, 1073741859, -589810, 14, -458764, 14, -458763, 1073741859, -458762, 1073741859, -458761, 1073741859, -458760, 1073741859, -458759, 1073741859, -458758, 1073741859, -458757, 1073741859, -458756, 1073741859, -458755, 1073741859, -458754, 1073741859, -458753, 1073741859, -524285, 1073741859, -524284, 1073741859, -524283, 1073741859, -524282, 1073741859, -524281, 1073741859, -524280, 1073741859, -524279, 1073741859, -524278, 1073741859, -524277, 1073741859, -524276, 1073741859, -524275, 1073741859, -524274, 14, -393228, 14, -393227, 1073741862, -393226, 1073741862, -393225, 1073741862, -393224, 1073741862, -393223, 1073741862, -393222, 1073741862, -393221, 1073741862, -393220, 1073741862, -393219, 1073741862, -393218, 1073741862, -393217, 1073741862, -458749, 1073741862, -458748, 1073741862, -458747, 1073741862, -458746, 1073741862, -458745, 1073741862, -458744, 1073741862, -458743, 1073741862, -458742, 1073741862, -458741, 1073741862, -458740, 1073741862, -458739, 1073741862, -458738, 14, -327692, 14, -393202, 14, -262156, 14, -327666, 14, -196620, 14, -262130, 14, -131084, 14, -196594, 14, -65548, 14, -131058, 14, -12, 14, -65522, 14, 65524, 14, 14, 14, 131060, 14, 65550, 14, 196596, 14, 131086, 14, 262132, 14, 196622, 14, 327668, 14, 262158, 14, 393204, 14, 327694, 14, 458740, 14, 393230, 14, 524276, 14, 458766, 14, 589812, 14, 524302, 14, 655348, 14, 589838, 14, 720884, 14, 655374, 14, 786420, 14, 720910, 14, 851956, 14, 786446, 14, 917492, 14, 851982, 14, 983028, 14, 917518, 14, 1048564, 14, 983054, 14, 1114100, 14, 1048590, 14, 1179636, 14, 1114126, 14, 1245172, 38, 1179662, 38, 1310708, 14, 1245198, 14, 1376244, 14, 1310734, 14, 1441780, 14, 1376270, 14, 1507316, 14, 1441806, 14, 1572852, 14, 1507342, 14, 1638388, 14, 1572878, 14, 1703924, 14, 1638414, 14, 1769460, 14, 1703950, 14, 1834996, 14, 1769486, 14, 1900532, 38, 1900533, 38, 1900534, 38, 1900535, 38, 1900536, 38, 1900537, 38, 1900538, 38, 1900539, 38, 1900540, 38, 1900541, 38, 1900542, 38, 1900543, 38, 1835008, 38, 1835009, 38, 1835010, 38, 1835011, 38, 1835012, 38, 1835013, 38, 1835014, 38, 1835015, 38, 1835016, 38, 1835017, 38, 1835018, 38, 1835019, 38, 1835020, 38, 1835021, 38, 1835022, 38 )

[node name="One-WayPlatformGroup" type="Node2D" parent="tilemap"]

editor/display_folded = true

[node name="One-WayPlatform" parent="tilemap/One-WayPlatformGroup" instance=ExtResource( 2 )]

transform/pos = Vector2( 48, 592 )

[node name="Sprite" parent="tilemap/One-WayPlatformGroup/One-WayPlatform/KinematicBody2D"]

region = true
region_rect = Rect2( 0, 0, 800, 32 )

[node name="oneway" parent="tilemap/One-WayPlatformGroup/One-WayPlatform/KinematicBody2D"]

transform/scale = Vector2( 25, 1 )

[node name="HangableGroup" type="Node2D" parent="tilemap"]

editor/display_folded = true

[node name="HangBlock" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( -336, 624 )

[node name="HangBlock1" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( -304, 624 )

[node name="HangBlock2" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( -272, 624 )

[node name="HangBlock3" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( -240, 624 )

[node name="HangBlock4" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( -208, 624 )

[node name="HangBlock5" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( -176, 624 )

[node name="HangBlock6" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( -144, 624 )

[node name="HangBlock7" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( -112, 624 )

[node name="HangBlock8" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( -80, 624 )

[node name="HangBlock9" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( -48, 624 )

[node name="HangBlock10" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( -16, 624 )

[node name="HangBlock11" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( 16, 624 )

[node name="HangBlock12" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( 48, 624 )

[node name="HangBlock13" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( 80, 624 )

[node name="HangBlock14" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( 112, 624 )

[node name="HangBlock15" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( 144, 624 )

[node name="HangBlock16" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( 176, 624 )

[node name="HangBlock17" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( 208, 624 )

[node name="HangBlock18" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( 240, 624 )

[node name="HangBlock19" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( 272, 624 )

[node name="HangBlock20" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( 304, 624 )

[node name="HangBlock21" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( 336, 624 )

[node name="HangBlock22" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( 368, 624 )

[node name="HangBlock23" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( 400, 624 )

[node name="HangBlock24" parent="tilemap/HangableGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( 432, 624 )

[node name="AccessGroup" type="Node2D" parent="tilemap"]

editor/display_folded = true

[node name="One-WayPlatform" parent="tilemap/AccessGroup" instance=ExtResource( 2 )]

transform/pos = Vector2( -320, -16 )

[node name="Sprite" parent="tilemap/AccessGroup/One-WayPlatform/KinematicBody2D"]

region = true
region_rect = Rect2( 0, 0, 64, 32 )

[node name="oneway" parent="tilemap/AccessGroup/One-WayPlatform/KinematicBody2D"]

transform/scale = Vector2( 2, 1 )

[node name="One-WayPlatform1" parent="tilemap/AccessGroup" instance=ExtResource( 2 )]

transform/pos = Vector2( -272, -16 )

[node name="Sprite" parent="tilemap/AccessGroup/One-WayPlatform1/KinematicBody2D"]

texture = ExtResource( 4 )
offset = Vector2( 3, 0 )

[node name="HangBlock" parent="tilemap/AccessGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( -336, 16 )

[node name="HangBlock1" parent="tilemap/AccessGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( -304, 16 )

[node name="HangBlock2" parent="tilemap/AccessGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( -272, 16 )

[node name="Sprite" parent="tilemap/AccessGroup/HangBlock2"]

texture = ExtResource( 5 )
flip_h = true

[node name="HangBlock3" parent="tilemap/AccessGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( -336, 272 )

[node name="HangBlock4" parent="tilemap/AccessGroup" instance=ExtResource( 3 )]

transform/pos = Vector2( -304, 272 )

[node name="Sprite" parent="tilemap/AccessGroup/HangBlock4"]

texture = ExtResource( 5 )
flip_h = true

[node name="SpikeGroup" type="Node2D" parent="tilemap"]

editor/display_folded = true

[node name="SpikeTile" parent="tilemap/SpikeGroup" instance=ExtResource( 6 )]

transform/pos = Vector2( 48, 880 )

[node name="Sprite" parent="tilemap/SpikeGroup/SpikeTile"]

region = true
region_rect = Rect2( 0, 0, 800, 32 )

[node name="damagable" parent="tilemap/SpikeGroup/SpikeTile"]

transform/scale = Vector2( 25, 1 )

[node name="GateGroup" type="Node2D" parent="tilemap"]

[node name="BossGroup" type="Node2D" parent="tilemap"]

editor/display_folded = true

[node name="GiantEyeball" parent="tilemap/BossGroup" instance=ExtResource( 7 )]

transform/pos = Vector2( 48, 32 )

[node name="SensorGroup" type="Node2D" parent="tilemap"]

[node name="sensor" type="Area2D" parent="tilemap/SensorGroup"]

transform/pos = Vector2( 0, 560 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.92502, 0, 0, 1, 49.3303, 3 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="tilemap/SensorGroup/sensor"]

transform/pos = Vector2( 49.3303, 3 )
transform/scale = Vector2( 0.92502, 1 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="TeleportGroup" type="Node2D" parent="tilemap"]

editor/display_folded = true

[node name="Teleport" parent="tilemap/TeleportGroup" instance=ExtResource( 9 )]

transform/pos = Vector2( 48, -336 )
is_horizontal = false
target_level = "res://levels/holyruins/0-0.tscn"
teleport_to = Vector2( 1136, 128 )

[node name="teleport" parent="tilemap/TeleportGroup/Teleport"]

transform/scale = Vector2( 3, 1 )

[node name="enabler" parent="tilemap/TeleportGroup/Teleport/teleport"]

enabler/pause_animated_sprites = true

[node name="boundaries" type="Node2D" parent="tilemap"]

editor/display_folded = true

[node name="NW" type="Position2D" parent="tilemap/boundaries"]

transform/pos = Vector2( -390, -326 )

[node name="SE" type="Position2D" parent="tilemap/boundaries"]

transform/pos = Vector2( 490, 938 )


[editable path="tilemap/One-WayPlatformGroup/One-WayPlatform"]
[editable path="tilemap/AccessGroup/One-WayPlatform"]
[editable path="tilemap/AccessGroup/One-WayPlatform1"]
[editable path="tilemap/AccessGroup/HangBlock2"]
[editable path="tilemap/AccessGroup/HangBlock4"]
[editable path="tilemap/SpikeGroup/SpikeTile"]
[editable path="tilemap/TeleportGroup/Teleport"]
